--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
     ],
     "python.defaultInterpreterPath": "venv/bin/python",
     "[python]": {
-        "editor.defaultFormatter": "ms-python.python", // ms-python.python
+        "editor.defaultFormatter": "ms-python.autopep8", // ms-python.python
         "editor.tabSize": 4,
         "editor.insertSpaces": true,
         "editor.formatOnSave": true,
@@ -59,7 +59,8 @@
         "django-html": "html", // batisteo.vscode-django
         "javascript": "javascriptreact",
         "typescript": "typescriptreact"
-    }
+    },
+    "python.formatting.provider": "none"
 }
 
 
