--- a/.env-example
+++ b/.env-example
@@ -1,21 +1,24 @@
-# Default number of objects per page
-PER_PAGE = 9
+# Default number objeects per page
+PER_PAGE = 6
 
 # Django secret key
-SECRET_KEY = 'CHANGE-ME'
+SECRET_KEY = 'YEu!}g(St-~Z>Kexjn]rj?XDILLpsHy]*Dm*RF;,]-J>(@qQCQyH)gSF'
 
-# 0 = False - 1 = True
+
+# 0 = False ---- 1 = True
 DEBUG = 1
 
+# 0 = False ---- 1 = True
+SELENIUM_HEADLESS = 1
 
 # Database settings
 # Sqlite
-DATABASE_ENGINE = 'django.db.backends.sqlite3'
-DATABASE_NAME = "./db.sqlite3"
+# DATABASE_ENGINE = 'django.db.backends.sqlite3'
+# DATABASE_NAME = "./db.sqlite3"
 
 # Postgres
-# DATABASE_ENGINE='django.db.backends.postgresql'
-# DATABASE_NAME="basededados"
+DATABASE_ENGINE = 'django.db.backends.postgresql'
+DATABASE_NAME = "basededados"
 
 DATABASE_USER = "usuario"
 DATABASE_PASSWORD = "senha"
